src/test/deca/syntax/valid/synt/if_while_cond.deca
// Description:
//    tests de programme avec des if while et conditions
//    syntaxiquement correct
//
// Resultats:
//    ok
//
// Historique:
//    cree le 11/01/2023
//

{
    int x = 1;
    int y = 2;
    boolean a = true;

    if (true) {
        print("a");
    } else if (false) {
        print("b");
    } else {
        print("c");
    }

    if (x==1) {}
    else if (y<=1) {}
    else if (y>=2) {}
    else if (y!=3) {}
    else if (y<1) {}
    else if (y>1) {}
    else if (a||a) {}
    else if (a&&a) {}
    else if (!a) {}
    else if (a==a) {}
    else if (a) {}
    else if (4<3) {}

    while(a){
        x = 2;
    }
}